# GCNv2_SLAM

./: .gitignore  .~lock.init_results.xlsx#  README.md  compareResults.csv  init_results.xlsx  plotCompare.ipynb  run-fr1-xyz.sh  run_slam.sh
Scripts/: Build_Source.sh
Source/: CMakeLists.txt
Source/Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Source/Examples/RGB-D/: rgbd_tum.cc
Source/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
Source/Libraries/GCN_ORB_SLAM2/: CMakeLists.txt
Source/Libraries/GCN_ORB_SLAM2/include/: Associater.h  FeatureExtractor.h  FeatureExtractorFactory.h  FeaturePoint.h  Frame.h  FrameDrawer.h  GCNextractor.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBmatcher.h  Optimizer.h  Sim3Solver.h  System.h  Tracking.h
Source/Libraries/GCN_ORB_SLAM2/src/: Associater.cc  FeatureExtractorFactory.cc  FeaturePoint.cc  Frame.cc  FrameDrawer.cc  GCNextractor.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
Source/Resources/: CMakeLists.txt
Source/Resources/GCN/: CMakeLists.txt
ape-results/: ape-fr1-floor-method-1.txt  ape-fr1-floor-method-2.txt  ape-fr1-xyz-method-1.txt  ape-fr1-xyz-method-2.txt  ape-fr3-nnf-method-1.txt  ape-fr3-nnf-method-2.txt
rpe-10-results/: rpe-10-fr1-floor-method-1.txt  rpe-10-fr1-floor-method-2.txt  rpe-10-fr1-xyz-method-1.txt  rpe-10-fr1-xyz-method-2.txt  rpe-10-fr3-nnf-method-1.txt  rpe-10-fr3-nnf-method-2.txt
rpe-20-results/: rpe-20-fr1-floor-method-1.txt  rpe-20-fr1-floor-method-2.txt  rpe-20-fr1-xyz-method-1.txt  rpe-20-fr1-xyz-method-2.txt  rpe-20-fr3-nnf-method-1.txt  rpe-20-fr3-nnf-method-2.txt
