install(FILES GCNvoc.bin DESTINATION ${DEFAULT_GCN_VOCABULARY_DIR})


# TODO - actually use wildcards here
install(FILES gcn2_320x240.pt DESTINATION ${DEFAULT_GCN_NETWORK_DIR})
install(FILES gcn2_tiny_320x240.pt DESTINATION ${DEFAULT_GCN_NETWORK_DIR})
install(FILES gcn2_640x480.pt DESTINATION ${DEFAULT_GCN_NETWORK_DIR})

